# Project_Workshop_Basic_Tasks

./: .gitignore
src/Lab1/: abc.cpp  hello_err.cpp  square_equation.cpp
src/Lab2/sfml.1/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
src/Lab2/sfml.1/00/: main.cpp
src/Lab2/sfml.1/01/: CMakeLists.txt  main.cpp
src/Lab2/sfml.1/02/: CMakeLists.txt  main.cpp
src/Lab2/sfml.1/03/: CMakeLists.txt  main.cpp
src/Lab3/: README.md
src/Lab3/sfml.2/: CMakeLists.txt
src/Lab3/sfml.2/00/: CMakeLists.txt  main.cpp
src/Lab3/sfml.2/01/: CMakeLists.txt  main.cpp
src/Lab3/sfml.2/02/: CMakeLists.txt  main.cpp
src/Lab3/sfml.2/03/: CMakeLists.txt  main.cpp
src/Lab3/sfml.2/sfml2.1/: CMakeLists.txt  main.cpp
src/Lab3/sfml.2/sfml2.2/: CMakeLists.txt  main.cpp
src/Lab4/sfml3/: CMakeLists.txt
src/Lab4/sfml3/00/: CMakeLists.txt  main.cpp
src/Lab4/sfml3/01/: main.cpp
src/Lab4/sfml3/sfml3.2/: CMakeLists.txt  main.cpp
src/Lab4/sfml3/sfml3.3/: CMakeLists.txt  main.cpp
src/Lab5/sfml_workshop_1/: CMakeLists.txt
src/Lab5/sfml_workshop_1/00/: main.cpp
src/Lab5/sfml_workshop_1/01/: main.cpp
src/Lab5/sfml_workshop_1/02/: main.cpp
src/Lab6/task_sfml_animation/: CMakeLists.txt
src/Lab6/task_sfml_animation/00/: CMakeLists.txt  main.cpp
src/Lab6/task_sfml_animation/01/: CMakeLists.txt  main.cpp
src/Lab6/task_sfml_animation/02/: main.cpp
