# Добавляем исполняемый файл 00
# add_executable() - создает исполняемый файл из указанных исходных файлов
# Первый аргумент - имя исполняемого файла, второй - список исходных файлов
add_executable(00 main.cpp)

# Включаем режим C++17 для цели сборки 00
# target_compile_features() - указывает, какие возможности C++ требуются для компиляции
# PUBLIC - эти возможности будут доступны и для других целей, которые связываются с этой
# cxx_std_17 - стандарт C++17
target_compile_features(00 PUBLIC cxx_std_17)
